# commodity-app

./: .gitignore  README.md  main.py  pyproject.toml
notebooks/: eda.ipynb  training.ipynb
src/: data_processor.py  model_def.py  train.py  transformer.py
