[project]
name = "commodity-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "duckdb>=1.4.4",
    "google-auth>=2.48.0",
    "google-auth-httplib2>=0.3.0",
    "google-auth-oauthlib>=1.2.4",
    "google-cloud-bigquery>=3.40.1",
    "google-cloud-bigquery-storage>=2.36.2",
    "pandas>=2.3.3",
    "pyarrow>=23.0.1",
    "streamlit>=1.54.0",
    "torch>=2.10.0",
    "transformers>=5.2.0",
    "wandb>=0.25.0",
]
